# Quick.AI

./: README.md  build_android.sh  build_api_lib.sh  build_test_app.sh  chat_template.cpp  factory.h  install_android.sh  main.cpp  meson.build  quantize.cpp  repeat_perf_test.py  run_test.sh
.github/workflows/: ci-android.yml  ci-linux.yml  codeql.yml  cpp-linter.yml
api/: causal_lm_api.cpp  causal_lm_api.h
benchmarks/: README.md  benchmark_android.py
jni/: Android.mk
layers/: causallm_common_properties.h  embedding_layer.cpp  embedding_layer.h  embedding_normalize_layer.cpp  embedding_normalize_layer.h  embedding_pooling_layer.cpp  embedding_pooling_layer.h  lm_head.cpp  lm_head.h  meson.build  mha_core.cpp  mha_core.h  qkv_layer.cpp  qkv_layer.h  reshaped_rms_norm.cpp  reshaped_rms_norm.h  rms_norm.cpp  rms_norm.h  swiglu.cpp  swiglu.h  tie_word_embedding.cpp  tie_word_embedding.h
models/: causal_lm.cpp  causal_lm.h  meson.build  performance_metrics.h  sentence_transformer.cpp  sentence_transformer.h  transformer.cpp  transformer.h  transformer_base.h
models/gemma3/: embedding_gemma.cpp  embedding_gemma.h  function.cpp  function.h  gemma3_causallm.cpp  gemma3_causallm.h  meson.build
models/gpt_oss/: gpt_oss_moe_layer.cpp  gpt_oss_moe_layer.h  gptoss_causallm.cpp  gptoss_causallm.h  meson.build
models/gpt_oss_cached_slim/: gpt_oss_moe_layer_cached.cpp  gpt_oss_moe_layer_cached.h  gptoss_cached_slim_causallm.cpp  gptoss_cached_slim_causallm.h  meson.build
models/qwen2/: meson.build  qwen2_causallm.cpp  qwen2_causallm.h  qwen2_embedding.cpp  qwen2_embedding.h
models/qwen3/: meson.build  qwen3_causallm.cpp  qwen3_causallm.h  qwen3_embedding.cpp  qwen3_embedding.h
models/qwen3_cached_slim_moe/: meson.build  qwen3_cached_slim_moe_causallm.cpp  qwen3_cached_slim_moe_causallm.h  qwen_moe_layer_cached.cpp  qwen_moe_layer_cached.h
models/qwen3_moe/: meson.build  qwen3_moe_causallm.cpp  qwen3_moe_causallm.h  qwen_moe_layer.cpp  qwen_moe_layer.h
models/qwen3_slim_moe/: meson.build  qwen3_slim_moe_causallm.cpp  qwen3_slim_moe_causallm.h  qwen_moe_layer_fsu.cpp  qwen_moe_layer_fsu.h
test/: README.md  unittest_tokenizer.cpp
test/scripts/: download_qwen3_0.6b.sh
